<resources>
    <string name="app_name">Graph Emulator</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_edge">edgeActivity</string>
    <string name="directed_graph">Directed Graph</string>
    <string name="random_graph">Random Graph</string>
    <string name="start">Start Emulating</string>
    <string name="insert">Insert</string>
    <string name="next">Next</string>
    <string name="add_vertex">Insert a Vertex</string>
    <string name="add_edge">Insert an Edge</string>
    <string name="graph">Graph</string>
    <string name="kruskal">Kruskal</string>
    <string name="dijkistra">Dijkstra</string>
    <string name="bfs">Breadth-First Search</string>
    <string name="dfs">Depth-First Search</string>
    <string name="tp_sort">Topological Sorting</string>
    <string name="trans_closure">Transitive Closure</string>
    <string name="floyd_warshall">Floyd–Warshall</string>
    <string name="features">Graph Features</string>
    <string name="title_activity_vertex">VertexActivity</string>
    <string name="weight">Weight</string>
    <string name="start_vertex">Start Vertex</string>
    <string name="end_vertex">End Vertex</string>
    <string name="vertex_name">Vertex Name</string>
    <string name="title_activity_description">DescriptionActivity</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="title_activity_top_sort">TopSortActivity</string>
    <string name="title_activity_warshall">WarshallActivity</string>
    <string name="title_activity_error">ErrorActivity</string>
    <string name="description">Description</string>
    <string name="complexity">Complexity</string>
    <string name="error">ERROR</string>
    <string name="help">HELP</string>
    <string name="title_activity_input">InputActivity</string>
    <string name="title_activity_reference">ReferenceActivity</string>
    <string name="reference">Reference</string>
</resources>
