<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bckgrd">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <include
            layout = "@layout/bar_title" />
        />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4D006666"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:padding="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/llWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="2"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:gravity="center"
                android:textSize="15dp"
                android:layout_weight="1"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:maxLength="3"
                android:background="@drawable/border"
                android:inputType="number"
                android:textSize="25dp"
                android:layout_weight="1"
                android:id="@+id/etWeight"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llVertex1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="2"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_vertex"
                android:gravity="center"
                android:textSize="15dp"
                android:layout_weight="1"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:maxLength="3"
                android:background="@drawable/border"
                android:inputType="textShortMessage"
                android:textSize="25dp"
                android:layout_weight="1"
                android:id="@+id/etStart"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llVertex2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="2"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/end_vertex"
                android:gravity="center"
                android:textSize="15dp"
                android:layout_weight="1"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:maxLength="3"
                android:background="@drawable/border"
                android:inputType="textShortMessage"
                android:textSize="25dp"
                android:layout_weight="1"
                android:id="@+id/etEnd"
                android:gravity="center" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bNext"
        android:text="@string/next"
        android:gravity="center"
        style="@style/button_custom"
        android:layout_gravity="bottom|center_horizontal" />

</LinearLayout>